# ner-project

./: .gitignore  README.md  pyproject.toml
Applications/: app.py  dashboard_trend_analysis.ipynb  resultados_analise_noticias.json  search.ipynb
Data/: convert.ipynb  data_spacy2.py  labeled2.json  noticias_dataset.json
LLM/: gold.json  ner.ipynb  predictions.json
Train_test_spacy/: train_test.ipynb
